--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^4.17.0",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.16.1",
+    "handlebars-dateformat": "^1.1.1",
+    "hbs": "^4.1.1",
     "moment": "^2.29.1",
     "mysql2": "^1.6.5",
     "passport": "^0.4.0",
