--- a/config/config.json
+++ b/config/config.json
@@ -1,14 +1,14 @@
 {
   "development": {
     "username": "root",
-    "password": "Dalegendkiller1",
+    "password": "VENUShu1988$",
     "database": "Travelers_Memoir_DB",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": "1234",
+    "password": "VENUShu1988$",
     "database": "The_Travelers_Memoir_DB",
     "host": "127.0.0.1",
     "dialect": "mysql"
