--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "amadeus": "^5.5.0",
+    "axios": "^0.21.0",
     "bcryptjs": "2.4.3",
     "express": "^4.17.0",
     "express-handlebars": "^5.2.0",
